--- a/fall2024/assignment/hw3/code/requirements.txt
+++ b/fall2024/assignment/hw3/code/requirements.txt
@@ -1,6 +1,7 @@
-transformers==4.26.1
-datasets==2.9.0
+transformers==4.45.2
+datasets==3.0.1
 torch==1.13.1
-evaluate==0.4.0
-scikit-learn==1.2.1
-nltk==3.8.1
+evaluate==0.4.3
+scikit-learn==1.5.2
+nltk==3.9.1
+numpy==1.26.2
